Первый стабильный релиз - Все проекты (без комментариев)

--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <meta name="description" content="Веб-студия «Мой голос»">
     <meta name="keywords" content="веб, Веб-студия, разработка, php, html5, css3">
     <meta name='yandex-verification' content='7b06ca2324c21a0d' />
-    <link href="/css/main.css" rel="stylesheet" type="text/css">
+    <link href="/css/style.css" rel="stylesheet" type="text/css">
     <link rel="shortcut icon" href="/favicon.ico">
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
     <script type="text/javascript">
         $(document).ready(function () {
             $("div.container > header > div > figure > img").click(function(){
-                window.location = "/api/?projects=all";
+                window.location = "/allprojects/";
             });
         });
     </script>
